# remarkable-integration

./: .gitignore  20250917_pending_sync.txt  :memory:  CHANGELOG.md  LICENSE  OCR_conversions.txt  README.md  check_converter_methods.py  debug_highlight_extractor.py  epub_debug_script.py  extract_text.py  last200logentries.txt  migrate_highlights.py  pyproject.toml  setup.sh  setup_database.sh  simple_database_creation_test.py  simple_rm_converter.py  sync_specific_todos.py  test_enhanced_extraction.py  test_enhanced_standalone.py  test_pdf_ocr.py  test_rm_parser.py  test_unified_sync.py  test_unified_sync_errors.py  verify_setup.py  view_db.sh
config/: config.yaml.example  database.yaml
config/prompts/: claude_ocr_default.txt  ocr_default.txt
docs/: ai-ocr.md  cli-usage.md  highlight_extraction.md  migration-gemini-ocr.md  notion-integration.md  todo-notion-linking.md  user-guide.md  watching-system.md
examples/: README.md  highlight_integration_demo.py
migrations/: 003_enhance_sync_records.py  004_add_notebook_associations.py  005_add_readwise_book_mapping.py  006_simplify_readwise_book_mapping.py
scripts/: README.md  add_unified_sync_schema.py  analyze_pending_sync_items.py  backfill_notion_block_ids.py  backfill_page_sync_records.py  backfill_synced_content.py  build_folder_hierarchy.py  check_readwise_duplicates.py  check_sync_gaps.py  check_text_encoding.py  clean_duplicates.py  clean_nonprintable_chars.py  clean_notion_database.py  clean_slate_reset.py  cleanup_duplicate_sync_records.py  cleanup_gibberish_highlights.py  cleanup_pdf_epub_extractions.py  compare_notion_records.py  create_backward_compatibility_views.py  create_block_mapping_table.py  create_highlight_sync_records_table.py  create_launchd_service.py  create_missing_notion_pages.py  create_todo_sync_table.py  database_setup.py  debug_database_query.py  debug_enhanced_extractor.py  debug_filtered_highlights.py  debug_test_script.py  deduplicate_todos.py  delete_readwise_duplicates.py  enhance_todos_with_dates.py  establish_notion_baseline.py  export_recent_todos_to_notion.py  export_todos_csv.py  export_todos_to_notion_with_links.py  final_sync_gaps.py  find_nonprintable_chars.py  fix_all_pages_sync.py  fix_changelog_constraint.py  (+60 more)
src/cli/: main.py
src/core/: book_metadata.py  change_detection.py  change_tracker.py  database.py  events.py  file_watcher.py  file_watcher.py.backup  notebook_paths.py  page_level_sync.py  rm_parser.py  rmc_color_patch.py  sync_engine.py  sync_hooks.py  sync_migration.py  sync_queue.py  sync_targets.py  unified_sync.py
src/integrations/: notion_incremental.py  notion_markdown.py  notion_sync.py  notion_todo_sync.py  notion_unified_sync.py  readwise_sync.py
src/processors/: claude_vision_ocr.py  enhanced_highlight_extractor.py  enhanced_highlight_extractor_v2.py  enhanced_highlight_extractor_v3.py  enhanced_tesseract_ocr.py  epub_text_matcher.py  gemini_vision_ocr.py  highlight_extractor.py  intelligent_todo_deduplication.py  notebook_text_extractor.py  pdf_ocr_engine.py  pdf_text_matcher.py  tesseract_ocr_engine.py
src/remarkable_integration/core/: events.py  rm2svg.py  rm_parser.py
src/remarkable_integration/processors/: highlight_extractor.py
src/utils/: __init__.py  api_keys.py  config.py  export_helpers.py  secrets.py
test_output/: Luisa.md  Ramosch.md  Test for integration.md  todos.md
tests/manual/: test_enhanced_extraction.py
