## pyproject.toml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "remarkable-integration"
version = "0.1.0"
description = "Automated integration for reMarkable tablet content"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "remarkable_integration", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rmscene = "^0.4.0"
watchdog = "^3.0.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
loguru = "^0.7.0"
click = "^8.1.0"
requests = "^2.31.0"
notion-client = "^2.2.0"
easyocr = "^1.7.0"
pillow = "^10.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
remarkable-integration = "remarkable_integration.cli.main:cli"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]