## pyproject.toml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "remarkable-integration"
version = "0.1.0"
description = "Automated integration for reMarkable tablet content"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "remarkable_integration", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rmscene = "^0.4.0"
watchdog = "^2.1.0"
sqlalchemy = "^2.0.0"
pydantic = "^1.8.0"
loguru = "^0.6.0"
click = "^8.1.0"
requests = "^2.31.0"
notion-client = "^2.2.0"
easyocr = "^1.7.0"
pillow = "^10.0.0"
pyyaml = "^6.0"
PyPDF2 = "^3.0.0"  # For PDF handling
cairosvg = "^2.8.2"
pandas = "^1.3.0"
numpy = "^1.20.0"
ebooklib = "^0.19"
lxml = {version = "^6.0.0", optional = true}
bs4 = "^0.0.2"
fuzzywuzzy = "^0.18.0"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.10.0"
black = "^22.0.0"
isort = "^5.10.0"
flake8 = "^4.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
remarkable-integration = "src.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]